--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ default: &default
   timeout: 5000
 
 development:
-  adapter: mysql2
+  adapter: sqlite3
   encoding: utf8
   reconnect: true
   database: collegeplanner
